multiply defined labels, nu kun defineret ét sted...

--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -112,7 +112,7 @@ stiller krav til Settling Time, \(t_s\), som skrevet i ligning \ref{eq:ks:settli
   \label{eq:ks:settlingtime1}
   \\
    t_{SB} &= 1,180 \text{ [s]} &\text{(SB)}
-  \label{eq:ks:toppunktstid}
+  \label{eq:ks:sbtid}
 \end{align}
 
 %I dette tidsrum skal Pan \& Tilt-systemet sigte præcist på lerduen og kravet til 
