--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -78,7 +78,7 @@ som angivet i ligning \ref{eq:pan_inerti}.
 \label{eq:pan_inerti} 
 \end{align}
 
-Inertimomentet for tilt er beregnet i ligning \ref{eq:inerti_tilt_pan}, mens inertimomentet for pan er beregnet i ligning \label{eq:pan_inerti}.
+Inertimomentet for tilt er beregnet i ligning \ref{eq:inerti_tilt_pan}, mens inertimomentet for pan er beregnet i ligning \ref{eq:pan_inerti}.
 Systemets gearing gør dog at inertimomenterne som motorerne belastes med, er mindre.
 Gearingen i EMG30-motoren er i forholdet 30:1, mens gearingen til rammerne er i forholdet 1:3.
 Ligning \ref{eq:gearing0} giver forholdet mellem det reflekterede inertimoment \(J_r\) (som motoren belastes med)
