Rettet "APOSTROF" til accent grave, http://da.wikipedia.org/wiki/Accenttegn#De_mest_almindelige_accenttegn

--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -54,7 +54,7 @@ Derfor er det ikke nødvendigt for programmøren at holde styr på timingen.
 Størrelsen af hvert dataframe kan være 4 - 16 bits. 
 
 UART er også implementeret som et hardwaremodul. 
-Modulet indeholder seperate FIFO-buffere til afsendelse og modtagelse af data, hver med plads til 16 datawords APOSTROF 8 bit data. 
+Modulet indeholder seperate FIFO-buffere til afsendelse og modtagelse af data, hver med plads til 16 datawords à 8 bit. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Valg af operativsystem og schedulering}
