--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -15,7 +15,7 @@ I afsnit \ref{sec:kravspecifikation} opstilles kravene til systemets respons.
 Disse er opsummeret nedenfor.
 \begin{itemize}
 \itemsep1pt
-\item \(t_{s} \leq 0,557 \mathrm{\left[s\right]}\) (Settling Time)
+\item \(t_{s} \leq 0,557 \text{ [s]}\) (Settling Time)
 \item \(TE \leq 1,02\degree\) (Trackingfejl efter \(t_s\))
 \end{itemize}
 
