--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -14,7 +14,7 @@ og med Trial-\&-Error metoden prøve sig frem til koefficienterne.
 \todo[inline, color=red!20]{Hvad menes der med dette?}
 
 Begge regulatorer gives et parabelinput, og deres performance vurderes
-efter deres evne til at følge parablen. Dvs. det er forsøgt at minimere Trackingfejlen.
+efter deres evne til at følge parablen. Dvs. det er forsøgt at minimere trackingfejlen.
 
 \begin{figure}[!th]
 \centering
@@ -138,9 +138,9 @@ Pan   & 100 & 110 & 3,8
 \begin{figure}[h!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/pidPhys2.eps}
-\caption[Endelig performance]{Endelig performance. Fejlsignaler for Pan (krydser) og Tilt (prikker) øverst, Trackingfejl nederst.
+\caption[Endelig performance]{Endelig performance. Fejlsignaler for Pan (krydser) og Tilt (prikker) øverst, trackingfejl nederst.
 Testen er foretaget med koefficienterne fra tabel \ref{tb:PID_final}.
-De sorte streger angiver kravene om Settling Time på under 0,557 [s] og Trackingfejl på under 1,02\degree{}.} 
+De sorte streger angiver kravene om Settling Time på under 0,557 [s] og trackingfejl på under 1,02\degree{}.} 
 \label{fig:PID_final}
 \end{figure}
 
