--- a/Rapport/content/Mikrocontroller.tex
+++ b/Rapport/content/Mikrocontroller.tex
@@ -334,6 +334,7 @@ Koordinat transformation & 228 [\micro s] & 202 [\micro s] & 206 [\micro s] & 21
 \hline 
 PID-regulering & 40 [\micro s] & 30 [\micro s] & 32 [\micro s] & 34 [\micro s]\\
 \end{tabu} 
+\captionsetup{width=0.8\textwidth}
 \caption[Afviklingstiden for Control task]{Afviklingstiden for Control task, Koordinattransformation og PID-regulering. Måleusikkerheden er $\pm4$ [\micro s].}
 \label{tb:ctrl task runtime test}
 \end{table}
