--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -200,6 +200,7 @@ parablen, og den resulterende rette linje er altså et mål for vinkelhastighede
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{./graphics/openloopVelocity1.eps}
+	\captionsetup{width=0.7\textwidth}
 	\caption[Tilt åbensløjferespons, målt vs. teoretisk]
 		{Tilt åbensløjferespons, målt vs. teoretisk.
 		Den teoretiske respons for de syv rampe-inputs er markeret med blåt.
