--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -281,6 +281,7 @@ sammen med de to spændingsniveauer, hvorudfra tidskonstanten bestemmes.
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{./graphics/induktans0.eps}
+	\captionsetup{width=0.7\textwidth}
 	\caption[Transientrespons for låst motor]
 		{Transientrespons for låst motor. De to vandrette røde linjer angiver spændingsniveauerne til bestemmelse af tidskonstanten.
 		Den øverste linje er ved 4 [V], mens den nederste linje er ved \(4\cdot \frac{1}{e}\)  [V].}
@@ -295,6 +296,7 @@ På figur \ref{fig:induktans1} er steady-state responsen for spændingsfaldene o
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{./graphics/induktans1.eps}
+	\captionsetup{width=0.7\textwidth}
 	\caption[Steady-state respons for låst motor]
 		{Steady-state respons for låst motor. Med mørkeblåt er markeret \(\mathbf{V_1}\) og med mørkegrønt \(\mathbf{V_2}\).
 		To tilpassede sinuskurver, fundet vha. MATLAB's fit-funktion, er indtegnet med lyseblåt og rødt.}
@@ -306,6 +308,7 @@ På figur \ref{fig:induktans2} er induktansmålingerne fra LCR-meteret indtegnet
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{./graphics/induktans2.eps}
+	\captionsetup{width=0.7\textwidth}
 	\caption[Induktans målt med LCR-meter]
 		{Induktanser målt ved forskellige testfrekvenser og motorpositioner med LCR-meteret.
 		For hver motorposition er der tegnet en linje gennem de 4-5 målepunkter.
@@ -537,6 +540,7 @@ De lavpasfiltrerede data kan ses på figur \ref{fig:vemf1}.
 \begin{figure}[th!]
 	\centering
 	\includegraphics[width=0.7\textwidth]{./graphics/vemf1.eps}
+	\captionsetup{width=0.7\textwidth}
 	\caption[Målt modelektromotorisk kraft ved acceleration af motor, lavpasfiltreret]
 		{Målt modelektromotorisk kraft ved acceleration af motor, lavpasfiltreret.
 		De indtegnede sorte streger viser hældningerne før og efter loddet ramte jorden.
