--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -174,9 +174,9 @@ Graferne viser ændringen af de tre størrelser i procent i forhold til det kont
 %Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{tilt}\),
 %mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{pan}\).
 %}
-
-\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system $G_{zoh}$]
-{Sammenligning af steprespons-performance for kontinuert system med diskretiseret system.
+\captionsetup{width=0.9\textwidth}
+\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system]
+{Sammenligning af steprespons-performance for kontinuert system med diskretiseret system \(G_{zoh}\).
 Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{tilt}$,
 mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{pan}$.
 }
