--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -155,7 +155,7 @@ på det kontinuerte systems respons når samplingfrekvensen er højest.
 \centering
 	\includegraphics[width=0.8\textwidth]{./graphics/diskretTiltStep.eps}
 	\captionsetup{width=0.7\textwidth}
-\caption[Sammenligning af steprespons performance]
+\caption[Sammenligning af steprespons mellem kontinuert og diskretiseret system]
 {Sammenligning af steprespons for kontinuert system med diskretiseret system.
 Den mørkeblå kurve er det kontinuerte systems respons,
 og de andre kurver er det diskretiserede systems respons ved en samplingfrekvens på
@@ -175,7 +175,7 @@ Graferne viser ændringen af de tre størrelser i procent i forhold til det kont
 %mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af \(G_{pan}\).
 %}
 \captionsetup{width=0.9\textwidth}
-\caption[Sammenligning af steprespons-performance for kontinuert system med diskretiseret system]
+\caption[Sammenligning af performance mellem kontinuert og diskretiseret system]
 {Sammenligning af steprespons-performance for kontinuert system med diskretiseret system \(G_{zoh}\).
 Den blå kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{tilt}$,
 mens den grønne kurve angiver fejlen i forhold til lukketsløjferesponsen af $G_{pan}$.
