Trackingfejl i et ord

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -162,7 +162,7 @@ De sorte streger angiver kravene om Settling Time på under 0,557 [s] og trackin
 %\begin{figure}[h!]
 %\centering
 %\includegraphics[width=1\textwidth]{./graphics/error_slut.eps}
-%\caption[Endelig regulator koefficienter]{Tracking fejl målt i grader for hhv. pan og tilt samt den samlet tracking fejl. Testen tager udgangspunkt i koefficienterne fra  tabel \ref{tb:PID_final} og det ses at den samlet tracking fejl opfylder kravet til PTS.} 
+%\caption[Endelig regulator koefficienter]{Trackingfejl målt i grader for hhv. pan og tilt samt den samlet trackingfejl. Testen tager udgangspunkt i koefficienterne fra  tabel \ref{tb:PID_final} og det ses at den samlet trackingfejl opfylder kravet til PTS.} 
 %\label{fig:PID_final}
 %\end{figure}
 
@@ -176,5 +176,5 @@ Ved manuel justering blev et sæt PID-regulatorkoefficienter fundet til Pan, som
 Det vurderedes nødvendigt at implementere et lavpasfilter til D-leddet.
 Med det implementerede filter gav de justerede regulatorkoefficienter en performance,
 der ikke ved alle forsøg levede op til kravspecifikationen. Ved nogle af forsøgene viste
-systemet sig at leve op til kravene om en Trackingfejl på under 1,02 \degree{} efter 0,557 [s].
+systemet sig at leve op til kravene om en trackingfejl på under 1,02\degree efter 0,557 [s].
 Systemet er følsomt overfor slid i drivremmene.
