--- a/Rapport/content/diskussion.tex
+++ b/Rapport/content/diskussion.tex
@@ -29,7 +29,7 @@ Det vurderes derfor, at den digitale controllers forsinkelser samlet set ikke fo
 reguleringens ydeevne betydeligt.
 
 De to regulatorer overholder ikke altid kravspecifikationen.
-I nogle forsøg opfylde systemet dog kravene om en Tracking fejl på under 1,02\degree{}
+I nogle forsøg opfylde systemet dog kravene om en trackingfejl på under 1,02\degree{}
 efter 0,557 [s].
 Systemet tillader ikke megen parametervariation
 som slid i drivremmene,
