--- a/Rapport/graphics/SPIslavemaster.tex
+++ b/Rapport/graphics/SPIslavemaster.tex
@@ -4,7 +4,7 @@
 \node (E) at (0.5,0.7) {\tiny Motor};
 
 \node (E) at (3,0.7) {\tiny N/A};
-\node (E) at (10.5,0.7) {\tiny PWM duty cycle};
+\node (E) at (10.5,0.7) {\tiny PWM-duty cycle};
 \node (E) at (0.5,0.3) {\tiny 1 bit};
 \node (E) at (3,0.3) {\tiny 4 bit};
 \node (E) at (10.5,0.3) {\tiny 11 bit};
