--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -7,7 +7,7 @@ I dette projekt udvikles et pan \& tilt trackingsystem, som følger en lerdues b
 luften. For at udvikle et sådant system skal passende regulatore designes og implementeres
 på en mikrocontroller. 
 %Desuden skal kommunikation mellem pan \& tilt systemet og mikrocontrolleren oprettes.
-En FPGA  bruges til at læse systemets position og generere ønsket PWM signal til motorerne. 
+En FPGA  bruges til at læse systemets position og generere ønsket PWM-signal til motorerne. 
 Denne skal kunne kommunikere med microcontrolleren vha. en FPGA. 
 Projektet udføres i overensstemmelse med det tilhørende projektoplæg, der er vedlagt 
 som bilag.
