--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -111,8 +111,7 @@ ud fra systemets dynamik,
 fra inputparablens egenskaber samt 
 mikrocontrollerens begrænsninger. 
 Inputparablen er samplet ved 120 [Hz], 
-\(f_s\) skal derfor være større end 120 [Hz] for at bevare inputsignalets integritet \citep[Side. XXX]{dsp}. 
-\todo[inline, color=red!20]{find sidetal i dsp bog}
+\(f_s\) skal derfor være større end 120 [Hz] for at bevare inputsignalets integritet \citep[Kap. 2.1]{dsp}. 
 Diskretiseringen af åbensløjfeoverføringsfunktionerne stiller også krav til samplingfrekvensen.
 %Diskretiseringen skal altså sammenlignes med den kontinuerte overføringsfunktion.
 Det vælges at sammenligne diskretiseringen af det fysiske system med det kontinuerte system i tidsdomænet.
