--- a/Rapport/content/tb_resistans.tex
+++ b/Rapport/content/tb_resistans.tex
@@ -15,6 +15,6 @@
 
 
 \begin{tabular}{r|r|r|r|r|r|r|r|r|r|r|r}
-$V_m$ [V]&0,509&0,883&1,1481&1,940&2,345&2,788&3,182&3,465&3,835& 4,067&4,292\\\hline
-$i_m$ [A]&0,094&0,172&0,297 &0,391&0,470&0,555&0,638&0,664&0,746&0,765&0,830
+\(V_m\) [V]&0,509&0,883&1,1481&1,940&2,345&2,788&3,182&3,465&3,835& 4,067&4,292\\\hline
+\(i_m\) [A]&0,094&0,172&0,297 &0,391&0,470&0,555&0,638&0,664&0,746&0,765&0,830
 \end{tabular}
