--- a/Rapport/graphics/Mangleratblivetegnet3.tex
+++ b/Rapport/graphics/Mangleratblivetegnet3.tex
@@ -1,7 +1,7 @@
 \draw
-(-2,0) to[sV, l^=\(10\text{ [kHz]}\)]  ++(0,3)
-to[R, l^=\(R_{s1}\)] ++(2,0)
-to[R, l^=\(R_m\)] ++(2,0)
-to[L, l^=\(L_m\)] ++(2,0)
+(-2,0) to[sV^=\(V_1\)]  ++(0,3) 
+to ++(1.5,0) node[draw, rectangle, minimum width=1.5cm, minimum height=0.5cm, fill=white] {} node[above,yshift=0.23cm] {\(Z_m\)}  
+to ++(1,0)
+to[R=\(R_{s1}\), v=\(V_2\)] ++(2,0)
 to ++(0,-3)
-to ++(-6,0);
+to (-2,0);
