Enheder tjekket.. (Håber ikke der er overset noget).

--- a/Rapport/content/app_FPGA.tex
+++ b/Rapport/content/app_FPGA.tex
@@ -39,7 +39,7 @@ Hvis PTS roterer i én retning sættes reset signalet højt på opadgående
 flanke på Hall sensor outputtet, mens reset signalet sættes højt på nedadgående 
 flanke i den anden retning. Reset signalet udsendes derved på samme sted, som vist på figur \ref{fig:hall_sensor_signal}.
 Hermed fås det smallest mulige område, hvor reset signalet er højt.
-Præcisionen på denne kalibrering er $\pm$ 1 tick.
+Præcisionen på denne kalibrering er \(\pm1\) tick.
 
 \textbf{Display}\\
 \textbf{Input:} Motorposition fra tic counter. Skaleret clock signal fra clock 
