--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -17,7 +17,7 @@ beregningerne tager udgangspunkt i rammernes mål:
 
 Den teoritiske beregning er foretaget ud fra følgende antagelser og simplificeringer:
 \begin{itemize}
-\item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5\) [kg/m], \citep[Kap. 2 side. 4]{alu_profil_desitet}.
+\item Aluminimumsprofilen, 40x40L, har en massefylde på \(\rho=1,5\) [kg/m], \citep[Kap. 2 Side. 4]{alu_profil_desitet}.
 \item Rammerne simplificeres som bestående af tynde stænger, således at hver ramme har to stænger, hvis bidrag
 til inertimomentet kan beregnes som var de punktmasser forskudt i forhold til rotationsaksen\citep[Side. 254, ligning 10-36]{fund_of_physics},
 vha. ligning \ref{eq:punktmasse_para}.
