--- a/Rapport/content/diskussion.tex
+++ b/Rapport/content/diskussion.tex
@@ -12,7 +12,7 @@ er to sæt af regulatorparametre \(K_p\) og \(K_i\) til to PI-regulatorer blevet
 Disse parametre vurderes til at skulle justeres
 i forhold til eksperimentelle målinger på det fysiske system, da simuleringen kun er en tilnærmelse.
 
-Regulatorernes parametre er med Trial-and-Error metoden blevet justeret,
+Regulatorernes parametre justeres vha. "trial and error"
 med udgangspunkt i simuleringsresultaterne.
 Justeringen viste, at det i praksis er nødvendigt at anvende en PID-regulator til Pan-systemet,
 og at de vha. simuleringen fundne regulatorparametre \(K_p\) og \(K_i\) for Tilt fungerer godt i praksis.
