--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -65,7 +65,8 @@ Figur \ref{fig:pidPhys1} viser pan og tilt-fejlsignalet i forhold til den kontin
 \captionsetup{width=0.6\textwidth}
 \caption[Fejlsignaler m. startkoefficienter]{Fejlsignaler m. startkoefficienterne fra tabel \ref{tb:pidSimulink}.
 	De sorte lodrette streger angiver \(t_s=0,557 \text{ [s]}\).
-	Pan-fejlsignalet er markeret med krydser, og tilt-fejlsignalet er markeret med prikker.} 
+	Pan-fejlsignalet er markeret med rødt, og tilt-fejlsignalet er markeret med blåt.
+	Grafen indeholder målinger fra flere forsøg.} 
 \label{fig:pidPhys1}
 \end{figure}
 \todo[inline, color=red!20]{En farve til tilt, en farve til pan. ingen kan se krydser eller prikker fra denne afstand.
@@ -138,9 +139,10 @@ Pan   & 100 & 110 & 3,8
 \begin{figure}[h!]
 \centering
 \includegraphics[width=1\textwidth]{./graphics/pidPhys2.eps}
-\caption[Endelig performance]{Endelig performance. Fejlsignaler for Pan (krydser) og Tilt (prikker) øverst, trackingfejl nederst.
+\caption[Endelig performance]{Endelig performance. Fejlsignaler for Pan (rød) og Tilt (blå) øverst, trackingfejl nederst.
 Testen er foretaget med koefficienterne fra tabel \ref{tb:PID_final}.
-De sorte streger angiver kravene om Settling Time på under 0,557 [s] og trackingfejl på under 1,02\degree{}.} 
+De sorte streger angiver kravene om Settling Time på under 0,557 [s] og trackingfejl på under 1,02\degree{}.
+Grafen indeholder målinger fra flere forsøg.} 
 \label{fig:PID_final}
 \end{figure}
 
