PTS stavemåde er gennemrettet.

--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -245,7 +245,7 @@ Origo flyttes, så kasteparablen kan beskrives ved vektor \(P_c\left(t\right)\),
 
 \textbf{Koordinattransformation}\\
 Sammenhængen mellem de kartesiske og de sfæriske koordinater kan ses på figur \ref{fig:thetaphi_degree}. 
-Med PTS'ets offset er origo for det sfæriske koordinatsystem PTS'ets rotationscenter (skæringspunktet mellem de to rotationsakser).
+Med PTS's offset er origo for det sfæriske koordinatsystem PTS's rotationscenter (skæringspunktet mellem de to rotationsakser).
 
 \begin{figure}[!th]
 \centering
