--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -194,7 +194,7 @@ vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm
 %\begin{tikzpicture}[scale=2]
 %\include*{./graphics/}
 %\end{tikzpicture}
-\caption[Rotationslåst motor med \(R_s1\)]{Rotationslåst motor, i serie med en modstand \(R_s1\) og en AC-forsyning.}
+\caption[Rotationslåst motor med \(R_s1\)]{Rotationslåst motor, i serie med en modstand \(R_{s1}\) og en AC-forsyning.}
 \label{fig:eksperiment2metode2}
 \end{figure}
 
