--- a/Rapport/graphics/SPImasterslave.tex
+++ b/Rapport/graphics/SPImasterslave.tex
@@ -7,7 +7,7 @@
 \node (E) at (1.5,0.7) {\tiny Retning};
 \node (E) at (2.5,0.7) {\tiny setPWM};
 \node (E) at (4,0.7) {\tiny N/A};
-\node (E) at (10.5,0.7) {\tiny PWM duty cycle};
+\node (E) at (10.5,0.7) {\tiny PWM-duty cycle};
 \node (E) at (0.5,0.3) {\tiny 1 bit};
 \node (E) at (1.5,0.3) {\tiny 1 bit};
 \node (E) at (2.5,0.3) {\tiny 1 bit};
