--- a/Rapport/content/PTS.tex
+++ b/Rapport/content/PTS.tex
@@ -141,7 +141,7 @@ Overføringsfunktionen fra duty cycle til DC-spænding står i ligning \ref{eq:t
 %\subsection{Pan- og tilt-systemernes åbensløjfeoverføringsfunktioner}
 \subsection{PTS's åbensløjfeoverføringsfunktioner}
 Hvert SISO-undersystem består af én PWM-blok på FPGA'en og en DC-motor med belastning.
-To overføringsfunktioner \(G_{pan}\) og \(G_{tilt}\) for pan- og tilt-systemet kan opskrives
+To overføringsfunktioner \(G_{pan}\) og \(G_{tilt}\) for PTS kan opskrives
 som produktet af ligning \ref{eq:transPWM} og \ref{eq:transTheta}. De to overføringsfunktioner
 står i ligningerne \ref{eq:transpantilt0}, og de er illustreret i figur \ref{fig:openloop1}.
 \begin{align}
