--- a/Rapport/content/abstract.tex
+++ b/Rapport/content/abstract.tex
@@ -11,7 +11,7 @@ A mathematical model of the physical dynamics of the Pan \& Tilt is
 %developed and used as basis for the controller design.
 derived and used as basis for the controller design.
 
-Two digital PID-controllers are designed: one for the Pan system and one for the Tilt system.
+Two digital PID-controllers are designed: one for the pan system and one for the tilt system.
 The controllers are designed in the discrete domain, and therefore a discretized model
 of the continuous part of the system is first obtained.
 The controllers utilize position feedback from 
