--- a/Rapport/content/app_panandtiltparameter.tex
+++ b/Rapport/content/app_panandtiltparameter.tex
@@ -11,7 +11,7 @@ beregningerne tager udgangspunkt i rammernes mål:
 \begin{tikzpicture}[scale=0.7]
 \include*{./graphics/inerti_PTS}
 \end{tikzpicture}
-\caption[Skitse af Pan \& Tilt-rammerne]{Skitse af Pan \& Tilt-rammerne.}
+\caption[Skitse af pan \& tilt-rammerne]{Skitse af pan \& tilt-rammerne.}
 \label{fig:inerti_PTS}
 \end{figure}
 
@@ -34,7 +34,7 @@ J=\frac { 1 }{ 12 } M\cdot { L }^{ 2 }
 \end{equation}
 \end{itemize}
 
-Med ovenstående formler er det muligt at finde Pan og Tilt-rammernes teoritiske inertimoment:
+Med ovenstående formler er det muligt at finde pan og tilt-rammernes teoritiske inertimoment:
 \begin{align}
 \label{eq:inerti_tilt_pan}
 \begin{split}
