--- a/Rapport/content/diskussion.tex
+++ b/Rapport/content/diskussion.tex
@@ -17,7 +17,7 @@ med udgangspunkt i simuleringsresultaterne.
 Justeringen viste, at det i praksis er nødvendigt at anvende en PID-regulator til Pan-systemet,
 og at de vha. simuleringen fundne regulatorparametre \(K_p\) og \(K_i\) for Tilt fungerer godt i praksis.
 %Desuden blev det under justeringen fundet, at det kan forbedre regulatorernes ydeevne
-%at justere dødzone-værdierne for Pan- og Tilt-systemerne.
+%at justere dødzone-værdierne for PTS.
 
 
 Reguleringssløjfernes realtidskrav er blevet opfyldt af implementeringen på mikrocontrolleren,
