Uh, baby baby, har flyttet test til appendix

--- a/Rapport/content/appen.tex
+++ b/Rapport/content/appen.tex
@@ -6,3 +6,4 @@
 \include{./content/app_panandtiltparameter}
 \include{./content/app_FPGA}
 \include{./content/Serial_Peripheral_Interface}
+\include{./content/app_uctest}
