--- a/Rapport/content/ansvarsomraader.tex
+++ b/Rapport/content/ansvarsomraader.tex
@@ -31,13 +31,13 @@ Navn&Opgaver/Ansvarsområder \\[6pt] \hline
 &\\[6pt] \hline
 Mikkel& DJ\\ 
 & Food supply\\[6pt] \hline
-Mikael&\\
+Mikael& Systemmodellering\\
 &\\[6pt] \hline
 Nikolaj&\\
 &\\[6pt] \hline
 Anders&\\
 &\\[6pt] \hline
-Michael & \\
+Michael & -\\
 &\\ 
 \end{tabular}     
 \caption*{Viser fordelingen af ansvarsområder.}            
