--- a/Rapport/content/app_DCmotor.tex
+++ b/Rapport/content/app_DCmotor.tex
@@ -7,7 +7,7 @@ DC Motoren kan modelleres efter diagrammet på figur \ref{fig:DCmotor}.
 \begin{figure}[!th]
 \centering
 \begin{circuitikz}
-\input{graphics/Mangleratblivetegnet.tex}  
+\input{graphics/figDCmotor.tex}  
 \end{circuitikz}
 \caption[DC motor]{Diagram over fysiske komponenter i DC motoren.}
 \label{fig:DCmotor}
@@ -158,7 +158,7 @@ Forbindes en modstand \(R_s\) i serie med DC-motoren som vist på figur \ref{fig
 \begin{figure}[!th]
 \centering
 \begin{circuitikz}
-\input{graphics/Mangleratblivetegnet2.tex}  
+\input{graphics/figE2metode1.tex}  
 \end{circuitikz}
 \caption[Rotationslåst motor med \(R_s\)]{Rotationslåst motor, i serie med en modstand \(R_s\).}
 \label{fig:eksperiment2metode1}
@@ -188,7 +188,7 @@ vil impedansen \(\mathbf{Z_m}\) af DC-motoren være givet ved ligning \ref{eq:zm
 \begin{figure}[!th]
 \centering
 \begin{circuitikz}
-\input{graphics/Mangleratblivetegnet3.tex}  
+\input{graphics/figE2metode2.tex}  
 \end{circuitikz}
 % \includegraphics[width=0.1\textwidth]{./graphics/Mangleratblivetegnet3}
 %\begin{tikzpicture}[scale=2]
