Ændret i et par figurer!

--- a/Rapport/content/FPGA.tex
+++ b/Rapport/content/FPGA.tex
@@ -59,7 +59,7 @@ yderligere forklaring af komponenterne henvises til appendix
 
 \begin{figure}[!th]
 \centering
-\begin{tikzpicture}[node distance = 5 cm,scale=1]
+\begin{tikzpicture}[node distance = 4 cm, scale=0.7, every node/.style={transform shape}]]
 \include*{./graphics/FPGA_blok}
 \end{tikzpicture}
 \caption[Diagram over FPGA komponenter]{Simplificeret diagram over komponenterne på FPGA'en.}
