--- a/Rapport/content/task_diagram_styles_v2.tex
+++ b/Rapport/content/task_diagram_styles_v2.tex
@@ -44,7 +44,7 @@
 \tikzstyle{task} = [circle, draw, color=black!50, text = black, fill=green!20, very thick, text width = 4.5em, minimum height = 4.5em, text centered]
 \tikzstyle{task_description} = [draw, color=black!50, text=black, fill=green!10, very thick,
     rectangle, rounded corners, inner sep=10pt, inner ysep=15pt, text width = 8em, align=left]
-\tikzstyle{task_title} =[fill=black!50, text=white, ellipse]
+\tikzstyle{task_title} =[fill=blue!20, text=black, ellipse]
 
 \tikzset{semaphore/.style={
    circle, draw, minimum height = 0.7cm, fill=white,
@@ -65,3 +65,7 @@
     }
   }
 } 
+
+
+\tikzstyle{fpga_component} = [draw, color=black!50, text=black, fill=green!10, very thick,
+    rectangle, rounded corners, inner sep=10pt,text centered, inner ysep=8pt, text width = 7em, align=left]
