--- a/Rapport/graphics/3d_in_xyz_plane.tex
+++ b/Rapport/graphics/3d_in_xyz_plane.tex
@@ -6,9 +6,9 @@
 \coordinate (Py1) at (0,0.5,0);
 \coordinate (Py) at (-0.375,0.375,-0.375);
 %draw the main coordinate system axes
-\draw[->] (-1,0,0) -- (1,0,0) node[right]{\(Y\)};
-\draw[->] (O) -- (0,0.75,0) node[above]{\(Z\)};
-\draw[->] (0,0,-1) -- (0,0,1) node[below]{\(X\)};
+\draw[->] (-1,0,0) -- (1,0,0) node[right]{\(y\)};
+\draw[->] (O) -- (0,0.75,0) node[above]{\(z\)};
+\draw[->] (0,0,-1) -- (0,0,1) node[below]{\(x\)};
 %draw a vector from origin to point (P) 
 \draw[-stealth,color=red] (O) -- (P);
 %draw projection on xy plane, and a connecting line
