arc through three points bothered me so I made the calculation myself and now it is faster to compile and works on mine and mikaels system.. is all happy?

--- a/Rapport/graphics/parabola_in_xy_plane.tex
+++ b/Rapport/graphics/parabola_in_xy_plane.tex
@@ -18,22 +18,25 @@
 \draw(-15,-0.2)node[below]{-15}--(-15,0.2);
 \draw(-20,-0.2)node[below]{-20}--(-20,0.2);
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\arcThroughThreePoints}[4][]{
-\coordinate (middle1) at ($(#2)!.5!(#3)$);
-\coordinate (middle2) at ($(#3)!.5!(#4)$);
-\coordinate (aux1) at ($(middle1)!1!90:(#3)$);
-\coordinate (aux2) at ($(middle2)!1!90:(#4)$);
-\coordinate (center) at ($(intersection of middle1--aux1 and middle2--aux2)$);
-\draw[#1] 
- let \p1=($(#2)-(center)$),
-      \p2=($(#4)-(center)$),
-      \n0={veclen(\p1)},       % Radius
-      \n1={atan2(\x1,\y1)}, % angles
-      \n2={atan2(\x2,\y2)},
-      \n3={\n2>\n1?\n2:\n2+360}
-    in (#2) arc(\n1:\n3:\n0);
-}
-\arcThroughThreePoints{-18.29,-5.5}{0,-19.1}{18.29,-5.5}
+%%% If we want to change it back..
+% \newcommand{\arcThroughThreePoints}[4][]{
+% \coordinate (middle1) at ($(#2)!.5!(#3)$);
+% \coordinate (middle2) at ($(#3)!.5!(#4)$);
+% \coordinate (aux1) at ($(middle1)!1!90:(#3)$);
+% \coordinate (aux2) at ($(middle2)!1!90:(#4)$);
+% \coordinate (center) at ($(intersection of middle1--aux1 and middle2--aux2)$);
+% \draw[#1] 
+%  let \p1=($(#2)-(center)$),
+%       \p2=($(#4)-(center)$),
+%       \n0={veclen(\p1)},       % Radius
+%       \n1={atan2(\x1,\y1)}, % angles 
+%       \n2={atan2(\x2,\y2)}, 
+%       \n3={\n2>\n1?\n2:\n2+360}       
+%     in (#2) arc(\n1:\n3:\n0);
+% }
+% \arcThroughThreePoints{-18.29,-5.5}{0,-19.1}{18.29,-5.5}
+
+\draw (18.29,-5.5) arc(163:17:-19.1); %this is simpler and works on all machines...
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \fill (0,0) circle[radius=9pt] node[above]{TCS};
