--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -243,12 +243,11 @@ mens fejlen på fasen er lille ved lave frekvenser og stiger ved høje frekvense
 
 \subsection{Upsampling}
 \label{subsec:upsampling}
-Da reguleringssløjfen afvikles med en 5 gange højere frekvens end der modtages input koordinater, er det nødvendigt at upsample input-signalet. 
-Normalt indsættes fire samples med værdien 0 mellem hvert inputsample, hvorefter signalet lavpasfiltreres for at undgå aliasing. Lavpasfiltret vil dog også forsinke signalet. 
+Da reguleringssløjfen afvikles med en frekvens der er 5 gange højere end der modtages inputkoordinater, er det nødvendigt at upsample inputsignalet. 
+Normalt indsættes fire samples med værdien 0 mellem hvert inputsample, hvorefter signalet lavpasfiltreres for at undgå aliasing.\todo[inline,author=Mikael]{Der skal en kilde til denne påstand} Lavpasfilteret vil dog også forsinke signalet. 
 
-Lavpasfiltret fravælges da det vurderes at alias toleres bedre end en forsinkelse på signalet. Dette skyldes at en forsinkelse ville bidrage til fejlsignalet. 
+Lavpasfiltret fravælges da det vurderes at alias tolereres bedre end en forsinkelse på signalet. Dette skyldes at en forsinkelse ville bidrage til fejlsignalet. 
 Det vælges derfor at bruge ZoH til upsamplingen, da denne reagerer momentant på ændringer i inputsignalet. 
-
 
 %%% GL. Upsampling:
 %Da reguleringssløjfen, som beskrevet i afsnit \ref{subsec:choosefs}, køres med en frekvens på 600 [Hz],
