--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -111,7 +111,7 @@ ud fra systemets dynamik,
 fra inputparablens egenskaber samt 
 mikrocontrollerens begrænsninger. 
 Inputparablen er samplet ved 120 [Hz], 
-\(f_s\) skal derfor være større end 120 [Hz] for at bevare inputsignalets integritet \citep[Kap. 2.1]{dsp}. 
+\(f_s\) skal derfor være større end 120 [Hz] for at bevare inputsignalets integritet \citep[s. 17]{dsp}. 
 Diskretiseringen af åbensløjfeoverføringsfunktionerne stiller også krav til samplingfrekvensen.
 %Diskretiseringen skal altså sammenlignes med den kontinuerte overføringsfunktion.
 Det vælges at sammenligne diskretiseringen af det fysiske system med det kontinuerte system i tidsdomænet.
@@ -143,7 +143,7 @@ Hvis diskretiseringen kræver at reguleringssløjfen kører ved en frekvens \(f_
 der er højere end A/D-konverteringens 120 [Hz], skal det A/D-konverterede
 signal "upsamples" til \(f_s\).
 Upsamplingen er simplest at implementere
-hvis \(f_s\) er et heltalsmultiplum af (120 [Hz]) \citep[Side. 562]{dsp}.
+hvis \(f_s\) er et heltalsmultiplum af (120 [Hz]) \citep[s. 562]{dsp}.
 Det vælges derfor at sample ved et heltalsmultiplum \(f_s\) af 120 [Hz].
 
 På figur \ref{fig:diskretTiltStep} er stepresponsen for lukketsløjfesystemet (med forstærkning 1)
@@ -244,7 +244,7 @@ mens fejlen på fasen er lille ved lave frekvenser og stiger ved høje frekvense
 \subsection{Upsampling}
 \label{subsec:upsampling}
 Da reguleringssløjfen afvikles med en 5 gange højere frekvens end der modtages input koordinater, er det nødvendigt at upsample input-signalet. 
-Normalt indsættes fire samples med værdien 0 mellem hvert inputsample, hvorefter signalet lavpasfiltreres for at undgå aliasing. Lavpasfiltret vil dog også forsinke signalet. 
+Normalt indsættes fire samples med værdien 0 mellem hvert inputsample, hvorefter signalet lavpasfiltreres for at undgå aliasing. \citep[s. 562]{dsp}. Lavpasfiltret vil dog også forsinke signalet. 
 
 Lavpasfiltret fravælges da det vurderes at alias toleres bedre end en forsinkelse på signalet. Dette skyldes at en forsinkelse ville bidrage til fejlsignalet. 
 Det vælges derfor at bruge ZoH til upsamplingen, da denne reagerer momentant på ændringer i inputsignalet. 
