todo's jf. tavlen

--- a/Rapport/content/indledning.tex
+++ b/Rapport/content/indledning.tex
@@ -1,4 +1,5 @@
 \section*{Indledning}
+\todo[inline,author=Mikael]{Mindre læseguide, mere awesomeness}
 Trackingsystemer spiller en stadig større rolle i vores hverdag og ses ofte i gadebilledet i form 
 af f.eks. overvågningskameraer.
 Fælles for mange af sådanne trackingsystemer er, at de bruger et Pan \& Tilt System til at følge deres mål. 
