--- a/Rapport/content/konklusion.tex
+++ b/Rapport/content/konklusion.tex
@@ -12,6 +12,7 @@ Efter manuel justering af PID-regulatoren til pan-systemet er det blevet fundet,
 at kravene til systemets performance ikke kan imødekommes i alle tilfælde.
 I nogle af de udførte tracking-forsøg var systemet dog i stand til at følge lerduens bevægelse
 iht. kravspecifikationen.
+\todo[inline,author=Mikael]{Se mere positivt på tingene}
 
 Det vurderes, at mere avancerede regulatortyper er nødvendige til den nøjagtige tracking af lerduen.
 
