--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -40,6 +40,7 @@ Men som illustreret på figur \ref{fig:digitalkontroller1}, så skal regulerings
 "køres" (sample) med en frekvens \(f_s=\frac{1}{T_s}\), der ikke nødvendigvis er 120 [Hz].
 Dvs. D/D- D/A- og A/D-konverteringerne (på nær input-samplingen) skal foregå med frekvensen \(f_s\).
 
+\todo[inline,author=Mikael]{Nedenstående ang. diskretiseringsmetoder skal være kortere, og der skal være KILDE!}
 Der er overordnet to strategier til valg af samplingfrekvensen \(f_s\) hvormed
 reguleringssløjfen skal køre:
 1) Hvis man designer en kontinuert regulator til det kontinuerte domæne, så
