--- a/Rapport/content/systemidentification.tex
+++ b/Rapport/content/systemidentification.tex
@@ -1,4 +1,5 @@
 \part{Systemidentifikation}
+\todo[inline,author=Mikael]{Dette afsnit skal være bedre!}
 Denne del gennemgår den teoretiske beskrivelse af systemet.
 Der udvikles en matematisk model af PTS og med udgangspunkt i denne vælges regulatortype.
 Desuden gennemgås transformationen fra kartesiske koordinater til sfæriske koordinater.
