--- a/Rapport/content/diskussion.tex
+++ b/Rapport/content/diskussion.tex
@@ -28,6 +28,7 @@ og SPI-kommunikationens afviklingstid varierer meget lidt fra gang til gang.
 Det vurderes derfor, at den digitale controllers forsinkelser samlet set ikke forværrer
 reguleringens ydeevne betydeligt.
 
+\todo[inline,author=Mikael]{Se mere positivt på tingene.}
 De to regulatorer overholder ikke altid kravspecifikationen.
 I nogle forsøg opfylde systemet dog kravene om en trackingfejl på under 1,02\degree{}
 efter 0,557 [s].
