tilt fejl er mindre nu. OG legend er placeret meget bedre.

--- a/Rapport/content/PID_optimering.tex
+++ b/Rapport/content/PID_optimering.tex
@@ -71,10 +71,10 @@ Figur \ref{fig:pidPhys1} viser pan og tilt-fejlsignalet i forhold til den kontin
 \end{figure}
 
 Som det ses på figur \ref{fig:pidPhys1} giver regulatoren til tilt et fejlsignal,
-der maks. afviger 0,9\degree{} efter \(t_s\).\todo[inline,author=Mikael]{Det er ikke 0,9 grader, og Mikael skal nok få det rettet jf. MATLAB scriptet.}
+der maks. afviger 0,66\degree{} efter \(t_s\).
 Pan-fejlen afviger derimod op til 1,8\degree{} efter \(t_s\).
 Trackingfejlen er altså langt større end kravet på maksimalt 1,02\degree.
-Det vurderes en yderligere manuel justering af koefficienterne på pan-regulatoren nødvendig.
+Det vurderes at en yderligere manuel justering af koefficienterne på pan-regulatoren nødvendig.
 Det vurderes på baggrund af det lave fejlsignal ved tilt at den fundne
 PI-regulator for tilt er anvendelig i praksis.
 
