så kom der kilde på!

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -42,7 +42,7 @@ Dvs. D/D- D/A- og A/D-konverteringerne (på nær input-samplingen) skal foregå 
 
 \todo[inline,author=Mikael]{Nedenstående ang. diskretiseringsmetoder skal være kortere, og der skal være KILDE!}
 Der er overordnet to strategier til valg af samplingfrekvensen \(f_s\) hvormed
-reguleringssløjfen skal køre:
+reguleringssløjfen skal køre \citep[s. 553]{elehandbook}:
 1) Hvis man designer en kontinuert regulator til det kontinuerte domæne, så
 skal diskretiseringen af controlleren være så tæt på den kontinuerte regulator som muligt.
 Det vil sige, samplingfrekvensen skal vælges så høj som mulig.
