--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -71,6 +71,14 @@ publisher = {John Wiley \& Sons, Inc},
 address={Cleveland},
 }
 
+@Book{elehandbook,
+author	={Irwin, J. David},
+year		={1997},
+title		={The Industrial Electronics Handbook},
+publisher={Taylor \& Francis},
+address	={USA},
+}
+
 
 @ONLINE{alu_profil_desitet,
 author = {{Bosch Rexroth Cooperation}},
